y.output
Terminals unused in grammar

   TOK_ERROR
   uniexpr
   multiexpr


Grammar

    0 $accept: S $end

    1 S: %empty
    2  | TOK_PROGRAM TOK_VARIABLE B
    3  | error ';' S

    4 $@1: %empty

    5 B: $@1 TOK_BEGIN INST TOK_END

    6 INST: %empty

    7 $@2: %empty

    8 $@3: %empty

    9 INST: $@2 I $@3 ';' INST

   10 I: IFDECL
   11  | IFDECL ELSEDECL
   12  | REPUNTIL

   13 $@4: %empty

   14 I: TOK_VARIABLE $@4 '=' E_BFIS
   15  | TOK_DATA_TYPE TOK_VARIABLE '=' E_BFIS
   16  | TOK_DATA_TYPE TOK_VARIABLE
   17  | TOK_PRINT TOK_VARIABLE
   18  | TOK_PRINT TOK_STRING_VALUE

   19 $@5: %empty

   20 ELSEDECL: $@5 TOK_ELSE B

   21 $@6: %empty

   22 $@7: %empty

   23 IFDECL: $@6 TOK_IF TOK_LEFT BOOLE $@7 TOK_RIGHT TOK_THEN B

   24 $@8: %empty

   25 BOOLE: E_BFIS $@8 TOK_EQU E_BFIS

   26 $@9: %empty

   27 BOOLE: E_BFIS $@9 TOK_NEQ E_BFIS

   28 $@10: %empty

   29 BOOLE: E_BFIS $@10 TOK_GTR E_BFIS

   30 $@11: %empty

   31 BOOLE: E_BFIS $@11 TOK_LSS E_BFIS

   32 $@12: %empty

   33 BOOLE: E_BFIS $@12 TOK_LEQ E_BFIS

   34 $@13: %empty

   35 BOOLE: E_BFIS $@13 TOK_GEQ E_BFIS

   36 $@14: %empty

   37 $@15: %empty

   38 REPUNTIL: $@14 TOK_REPEAT B TOK_UNTIL TOK_LEFT BOOLE $@15 TOK_RIGHT

   39 E_BFIS: E_BFIS TOK_PLUS E_BFIS
   40       | E_BFIS TOK_MINUS E_BFIS
   41       | E_BFIS TOK_MULTIPLY E_BFIS
   42       | E_BFIS TOK_DIVIDE E_BFIS
   43       | TOK_LEFT E_BFIS TOK_RIGHT
   44       | TOK_VARIABLE
   45       | TOK_INT_VALUE
   46       | TOK_FLOAT_VALUE
   47       | TOK_STRING_VALUE
   48       | TOK_TRUE
   49       | TOK_FALSE


Terminals, with rules where they appear

$end (0) 0
';' (59) 3 9
'=' (61) 14 15
error (256) 3
TOK_PROGRAM (258) 2
TOK_PLUS (259) 39
TOK_MINUS (260) 40
TOK_MULTIPLY (261) 41
TOK_DIVIDE (262) 42
TOK_LEFT (263) 23 38 43
TOK_RIGHT (264) 23 38 43
TOK_NEQ (265) 27
TOK_EQU (266) 25
TOK_GTR (267) 29
TOK_LSS (268) 31
TOK_LEQ (269) 33
TOK_GEQ (270) 35
TOK_BEGIN (271) 5
TOK_END (272) 5
TOK_REPEAT (273) 38
TOK_UNTIL (274) 38
TOK_IF (275) 23
TOK_ELSE (276) 20
TOK_PRINT (277) 17 18
TOK_ERROR (278)
TOK_THEN (279) 23
ifx (280)
TOK_INT_VALUE (281) 45
TOK_FLOAT_VALUE (282) 46
TOK_TRUE (283) 48
TOK_FALSE (284) 49
TOK_STRING_VALUE (285) 18 47
TOK_DATA_TYPE (286) 15 16
TOK_VARIABLE (287) 2 14 15 16 17 44
uniexpr (288)
multiexpr (289)


Nonterminals, with rules where they appear

$accept (37)
    on left: 0
S (38)
    on left: 1 2 3, on right: 0 3
B (39)
    on left: 5, on right: 2 20 23 38
$@1 (40)
    on left: 4, on right: 5
INST (41)
    on left: 6 9, on right: 5 9
$@2 (42)
    on left: 7, on right: 9
$@3 (43)
    on left: 8, on right: 9
I (44)
    on left: 10 11 12 14 15 16 17 18, on right: 9
$@4 (45)
    on left: 13, on right: 14
ELSEDECL (46)
    on left: 20, on right: 11
$@5 (47)
    on left: 19, on right: 20
IFDECL (48)
    on left: 23, on right: 10 11
$@6 (49)
    on left: 21, on right: 23
$@7 (50)
    on left: 22, on right: 23
BOOLE (51)
    on left: 25 27 29 31 33 35, on right: 23 38
$@8 (52)
    on left: 24, on right: 25
$@9 (53)
    on left: 26, on right: 27
$@10 (54)
    on left: 28, on right: 29
$@11 (55)
    on left: 30, on right: 31
$@12 (56)
    on left: 32, on right: 33
$@13 (57)
    on left: 34, on right: 35
REPUNTIL (58)
    on left: 38, on right: 12
$@14 (59)
    on left: 36, on right: 38
$@15 (60)
    on left: 37, on right: 38
E_BFIS (61)
    on left: 39 40 41 42 43 44 45 46 47 48 49, on right: 14 15 25 27
    29 31 33 35 39 40 41 42 43


State 0

    0 $accept: . S $end

    error        shift, and go to state 1
    TOK_PROGRAM  shift, and go to state 2

    $end  reduce using rule 1 (S)

    S  go to state 3


State 1

    3 S: error . ';' S

    ';'  shift, and go to state 4


State 2

    2 S: TOK_PROGRAM . TOK_VARIABLE B

    TOK_VARIABLE  shift, and go to state 5


State 3

    0 $accept: S . $end

    $end  shift, and go to state 6


State 4

    3 S: error ';' . S

    error        shift, and go to state 1
    TOK_PROGRAM  shift, and go to state 2

    $end  reduce using rule 1 (S)

    S  go to state 7


State 5

    2 S: TOK_PROGRAM TOK_VARIABLE . B

    $default  reduce using rule 4 ($@1)

    B    go to state 8
    $@1  go to state 9


State 6

    0 $accept: S $end .

    $default  accept


State 7

    3 S: error ';' S .

    $default  reduce using rule 3 (S)


State 8

    2 S: TOK_PROGRAM TOK_VARIABLE B .

    $default  reduce using rule 2 (S)


State 9

    5 B: $@1 . TOK_BEGIN INST TOK_END

    TOK_BEGIN  shift, and go to state 10


State 10

    5 B: $@1 TOK_BEGIN . INST TOK_END

    TOK_END   reduce using rule 6 (INST)
    $default  reduce using rule 7 ($@2)

    INST  go to state 11
    $@2   go to state 12


State 11

    5 B: $@1 TOK_BEGIN INST . TOK_END

    TOK_END  shift, and go to state 13


State 12

    9 INST: $@2 . I $@3 ';' INST

    TOK_PRINT      shift, and go to state 14
    TOK_DATA_TYPE  shift, and go to state 15
    TOK_VARIABLE   shift, and go to state 16

    TOK_REPEAT  reduce using rule 36 ($@14)
    $default    reduce using rule 21 ($@6)

    I         go to state 17
    IFDECL    go to state 18
    $@6       go to state 19
    REPUNTIL  go to state 20
    $@14      go to state 21


State 13

    5 B: $@1 TOK_BEGIN INST TOK_END .

    $default  reduce using rule 5 (B)


State 14

   17 I: TOK_PRINT . TOK_VARIABLE
   18  | TOK_PRINT . TOK_STRING_VALUE

    TOK_STRING_VALUE  shift, and go to state 22
    TOK_VARIABLE      shift, and go to state 23


State 15

   15 I: TOK_DATA_TYPE . TOK_VARIABLE '=' E_BFIS
   16  | TOK_DATA_TYPE . TOK_VARIABLE

    TOK_VARIABLE  shift, and go to state 24


State 16

   14 I: TOK_VARIABLE . $@4 '=' E_BFIS

    $default  reduce using rule 13 ($@4)

    $@4  go to state 25


State 17

    9 INST: $@2 I . $@3 ';' INST

    $default  reduce using rule 8 ($@3)

    $@3  go to state 26


State 18

   10 I: IFDECL .
   11  | IFDECL . ELSEDECL

    TOK_ELSE  reduce using rule 19 ($@5)
    $default  reduce using rule 10 (I)

    ELSEDECL  go to state 27
    $@5       go to state 28


State 19

   23 IFDECL: $@6 . TOK_IF TOK_LEFT BOOLE $@7 TOK_RIGHT TOK_THEN B

    TOK_IF  shift, and go to state 29


State 20

   12 I: REPUNTIL .

    $default  reduce using rule 12 (I)


State 21

   38 REPUNTIL: $@14 . TOK_REPEAT B TOK_UNTIL TOK_LEFT BOOLE $@15 TOK_RIGHT

    TOK_REPEAT  shift, and go to state 30


State 22

   18 I: TOK_PRINT TOK_STRING_VALUE .

    $default  reduce using rule 18 (I)


State 23

   17 I: TOK_PRINT TOK_VARIABLE .

    $default  reduce using rule 17 (I)


State 24

   15 I: TOK_DATA_TYPE TOK_VARIABLE . '=' E_BFIS
   16  | TOK_DATA_TYPE TOK_VARIABLE .

    '='  shift, and go to state 31

    $default  reduce using rule 16 (I)


State 25

   14 I: TOK_VARIABLE $@4 . '=' E_BFIS

    '='  shift, and go to state 32


State 26

    9 INST: $@2 I $@3 . ';' INST

    ';'  shift, and go to state 33


State 27

   11 I: IFDECL ELSEDECL .

    $default  reduce using rule 11 (I)


State 28

   20 ELSEDECL: $@5 . TOK_ELSE B

    TOK_ELSE  shift, and go to state 34


State 29

   23 IFDECL: $@6 TOK_IF . TOK_LEFT BOOLE $@7 TOK_RIGHT TOK_THEN B

    TOK_LEFT  shift, and go to state 35


State 30

   38 REPUNTIL: $@14 TOK_REPEAT . B TOK_UNTIL TOK_LEFT BOOLE $@15 TOK_RIGHT

    $default  reduce using rule 4 ($@1)

    B    go to state 36
    $@1  go to state 9


State 31

   15 I: TOK_DATA_TYPE TOK_VARIABLE '=' . E_BFIS

    TOK_LEFT          shift, and go to state 37
    TOK_INT_VALUE     shift, and go to state 38
    TOK_FLOAT_VALUE   shift, and go to state 39
    TOK_TRUE          shift, and go to state 40
    TOK_FALSE         shift, and go to state 41
    TOK_STRING_VALUE  shift, and go to state 42
    TOK_VARIABLE      shift, and go to state 43

    E_BFIS  go to state 44


State 32

   14 I: TOK_VARIABLE $@4 '=' . E_BFIS

    TOK_LEFT          shift, and go to state 37
    TOK_INT_VALUE     shift, and go to state 38
    TOK_FLOAT_VALUE   shift, and go to state 39
    TOK_TRUE          shift, and go to state 40
    TOK_FALSE         shift, and go to state 41
    TOK_STRING_VALUE  shift, and go to state 42
    TOK_VARIABLE      shift, and go to state 43

    E_BFIS  go to state 45


State 33

    9 INST: $@2 I $@3 ';' . INST

    TOK_END   reduce using rule 6 (INST)
    $default  reduce using rule 7 ($@2)

    INST  go to state 46
    $@2   go to state 12


State 34

   20 ELSEDECL: $@5 TOK_ELSE . B

    $default  reduce using rule 4 ($@1)

    B    go to state 47
    $@1  go to state 9


State 35

   23 IFDECL: $@6 TOK_IF TOK_LEFT . BOOLE $@7 TOK_RIGHT TOK_THEN B

    TOK_LEFT          shift, and go to state 37
    TOK_INT_VALUE     shift, and go to state 38
    TOK_FLOAT_VALUE   shift, and go to state 39
    TOK_TRUE          shift, and go to state 40
    TOK_FALSE         shift, and go to state 41
    TOK_STRING_VALUE  shift, and go to state 42
    TOK_VARIABLE      shift, and go to state 43

    BOOLE   go to state 48
    E_BFIS  go to state 49


State 36

   38 REPUNTIL: $@14 TOK_REPEAT B . TOK_UNTIL TOK_LEFT BOOLE $@15 TOK_RIGHT

    TOK_UNTIL  shift, and go to state 50


State 37

   43 E_BFIS: TOK_LEFT . E_BFIS TOK_RIGHT

    TOK_LEFT          shift, and go to state 37
    TOK_INT_VALUE     shift, and go to state 38
    TOK_FLOAT_VALUE   shift, and go to state 39
    TOK_TRUE          shift, and go to state 40
    TOK_FALSE         shift, and go to state 41
    TOK_STRING_VALUE  shift, and go to state 42
    TOK_VARIABLE      shift, and go to state 43

    E_BFIS  go to state 51


State 38

   45 E_BFIS: TOK_INT_VALUE .

    $default  reduce using rule 45 (E_BFIS)


State 39

   46 E_BFIS: TOK_FLOAT_VALUE .

    $default  reduce using rule 46 (E_BFIS)


State 40

   48 E_BFIS: TOK_TRUE .

    $default  reduce using rule 48 (E_BFIS)


State 41

   49 E_BFIS: TOK_FALSE .

    $default  reduce using rule 49 (E_BFIS)


State 42

   47 E_BFIS: TOK_STRING_VALUE .

    $default  reduce using rule 47 (E_BFIS)


State 43

   44 E_BFIS: TOK_VARIABLE .

    $default  reduce using rule 44 (E_BFIS)


State 44

   15 I: TOK_DATA_TYPE TOK_VARIABLE '=' E_BFIS .
   39 E_BFIS: E_BFIS . TOK_PLUS E_BFIS
   40       | E_BFIS . TOK_MINUS E_BFIS
   41       | E_BFIS . TOK_MULTIPLY E_BFIS
   42       | E_BFIS . TOK_DIVIDE E_BFIS

    TOK_PLUS      shift, and go to state 52
    TOK_MINUS     shift, and go to state 53
    TOK_MULTIPLY  shift, and go to state 54
    TOK_DIVIDE    shift, and go to state 55

    $default  reduce using rule 15 (I)


State 45

   14 I: TOK_VARIABLE $@4 '=' E_BFIS .
   39 E_BFIS: E_BFIS . TOK_PLUS E_BFIS
   40       | E_BFIS . TOK_MINUS E_BFIS
   41       | E_BFIS . TOK_MULTIPLY E_BFIS
   42       | E_BFIS . TOK_DIVIDE E_BFIS

    TOK_PLUS      shift, and go to state 52
    TOK_MINUS     shift, and go to state 53
    TOK_MULTIPLY  shift, and go to state 54
    TOK_DIVIDE    shift, and go to state 55

    $default  reduce using rule 14 (I)


State 46

    9 INST: $@2 I $@3 ';' INST .

    $default  reduce using rule 9 (INST)


State 47

   20 ELSEDECL: $@5 TOK_ELSE B .

    $default  reduce using rule 20 (ELSEDECL)


State 48

   23 IFDECL: $@6 TOK_IF TOK_LEFT BOOLE . $@7 TOK_RIGHT TOK_THEN B

    $default  reduce using rule 22 ($@7)

    $@7  go to state 56


State 49

   25 BOOLE: E_BFIS . $@8 TOK_EQU E_BFIS
   27      | E_BFIS . $@9 TOK_NEQ E_BFIS
   29      | E_BFIS . $@10 TOK_GTR E_BFIS
   31      | E_BFIS . $@11 TOK_LSS E_BFIS
   33      | E_BFIS . $@12 TOK_LEQ E_BFIS
   35      | E_BFIS . $@13 TOK_GEQ E_BFIS
   39 E_BFIS: E_BFIS . TOK_PLUS E_BFIS
   40       | E_BFIS . TOK_MINUS E_BFIS
   41       | E_BFIS . TOK_MULTIPLY E_BFIS
   42       | E_BFIS . TOK_DIVIDE E_BFIS

    TOK_PLUS      shift, and go to state 52
    TOK_MINUS     shift, and go to state 53
    TOK_MULTIPLY  shift, and go to state 54
    TOK_DIVIDE    shift, and go to state 55

    TOK_NEQ   reduce using rule 26 ($@9)
    TOK_GTR   reduce using rule 28 ($@10)
    TOK_LSS   reduce using rule 30 ($@11)
    TOK_LEQ   reduce using rule 32 ($@12)
    TOK_GEQ   reduce using rule 34 ($@13)
    $default  reduce using rule 24 ($@8)

    $@8   go to state 57
    $@9   go to state 58
    $@10  go to state 59
    $@11  go to state 60
    $@12  go to state 61
    $@13  go to state 62


State 50

   38 REPUNTIL: $@14 TOK_REPEAT B TOK_UNTIL . TOK_LEFT BOOLE $@15 TOK_RIGHT

    TOK_LEFT  shift, and go to state 63


State 51

   39 E_BFIS: E_BFIS . TOK_PLUS E_BFIS
   40       | E_BFIS . TOK_MINUS E_BFIS
   41       | E_BFIS . TOK_MULTIPLY E_BFIS
   42       | E_BFIS . TOK_DIVIDE E_BFIS
   43       | TOK_LEFT E_BFIS . TOK_RIGHT

    TOK_PLUS      shift, and go to state 52
    TOK_MINUS     shift, and go to state 53
    TOK_MULTIPLY  shift, and go to state 54
    TOK_DIVIDE    shift, and go to state 55
    TOK_RIGHT     shift, and go to state 64


State 52

   39 E_BFIS: E_BFIS TOK_PLUS . E_BFIS

    TOK_LEFT          shift, and go to state 37
    TOK_INT_VALUE     shift, and go to state 38
    TOK_FLOAT_VALUE   shift, and go to state 39
    TOK_TRUE          shift, and go to state 40
    TOK_FALSE         shift, and go to state 41
    TOK_STRING_VALUE  shift, and go to state 42
    TOK_VARIABLE      shift, and go to state 43

    E_BFIS  go to state 65


State 53

   40 E_BFIS: E_BFIS TOK_MINUS . E_BFIS

    TOK_LEFT          shift, and go to state 37
    TOK_INT_VALUE     shift, and go to state 38
    TOK_FLOAT_VALUE   shift, and go to state 39
    TOK_TRUE          shift, and go to state 40
    TOK_FALSE         shift, and go to state 41
    TOK_STRING_VALUE  shift, and go to state 42
    TOK_VARIABLE      shift, and go to state 43

    E_BFIS  go to state 66


State 54

   41 E_BFIS: E_BFIS TOK_MULTIPLY . E_BFIS

    TOK_LEFT          shift, and go to state 37
    TOK_INT_VALUE     shift, and go to state 38
    TOK_FLOAT_VALUE   shift, and go to state 39
    TOK_TRUE          shift, and go to state 40
    TOK_FALSE         shift, and go to state 41
    TOK_STRING_VALUE  shift, and go to state 42
    TOK_VARIABLE      shift, and go to state 43

    E_BFIS  go to state 67


State 55

   42 E_BFIS: E_BFIS TOK_DIVIDE . E_BFIS

    TOK_LEFT          shift, and go to state 37
    TOK_INT_VALUE     shift, and go to state 38
    TOK_FLOAT_VALUE   shift, and go to state 39
    TOK_TRUE          shift, and go to state 40
    TOK_FALSE         shift, and go to state 41
    TOK_STRING_VALUE  shift, and go to state 42
    TOK_VARIABLE      shift, and go to state 43

    E_BFIS  go to state 68


State 56

   23 IFDECL: $@6 TOK_IF TOK_LEFT BOOLE $@7 . TOK_RIGHT TOK_THEN B

    TOK_RIGHT  shift, and go to state 69


State 57

   25 BOOLE: E_BFIS $@8 . TOK_EQU E_BFIS

    TOK_EQU  shift, and go to state 70


State 58

   27 BOOLE: E_BFIS $@9 . TOK_NEQ E_BFIS

    TOK_NEQ  shift, and go to state 71


State 59

   29 BOOLE: E_BFIS $@10 . TOK_GTR E_BFIS

    TOK_GTR  shift, and go to state 72


State 60

   31 BOOLE: E_BFIS $@11 . TOK_LSS E_BFIS

    TOK_LSS  shift, and go to state 73


State 61

   33 BOOLE: E_BFIS $@12 . TOK_LEQ E_BFIS

    TOK_LEQ  shift, and go to state 74


State 62

   35 BOOLE: E_BFIS $@13 . TOK_GEQ E_BFIS

    TOK_GEQ  shift, and go to state 75


State 63

   38 REPUNTIL: $@14 TOK_REPEAT B TOK_UNTIL TOK_LEFT . BOOLE $@15 TOK_RIGHT

    TOK_LEFT          shift, and go to state 37
    TOK_INT_VALUE     shift, and go to state 38
    TOK_FLOAT_VALUE   shift, and go to state 39
    TOK_TRUE          shift, and go to state 40
    TOK_FALSE         shift, and go to state 41
    TOK_STRING_VALUE  shift, and go to state 42
    TOK_VARIABLE      shift, and go to state 43

    BOOLE   go to state 76
    E_BFIS  go to state 49


State 64

   43 E_BFIS: TOK_LEFT E_BFIS TOK_RIGHT .

    $default  reduce using rule 43 (E_BFIS)


State 65

   39 E_BFIS: E_BFIS . TOK_PLUS E_BFIS
   39       | E_BFIS TOK_PLUS E_BFIS .
   40       | E_BFIS . TOK_MINUS E_BFIS
   41       | E_BFIS . TOK_MULTIPLY E_BFIS
   42       | E_BFIS . TOK_DIVIDE E_BFIS

    TOK_MULTIPLY  shift, and go to state 54
    TOK_DIVIDE    shift, and go to state 55

    $default  reduce using rule 39 (E_BFIS)


State 66

   39 E_BFIS: E_BFIS . TOK_PLUS E_BFIS
   40       | E_BFIS . TOK_MINUS E_BFIS
   40       | E_BFIS TOK_MINUS E_BFIS .
   41       | E_BFIS . TOK_MULTIPLY E_BFIS
   42       | E_BFIS . TOK_DIVIDE E_BFIS

    TOK_MULTIPLY  shift, and go to state 54
    TOK_DIVIDE    shift, and go to state 55

    $default  reduce using rule 40 (E_BFIS)


State 67

   39 E_BFIS: E_BFIS . TOK_PLUS E_BFIS
   40       | E_BFIS . TOK_MINUS E_BFIS
   41       | E_BFIS . TOK_MULTIPLY E_BFIS
   41       | E_BFIS TOK_MULTIPLY E_BFIS .
   42       | E_BFIS . TOK_DIVIDE E_BFIS

    $default  reduce using rule 41 (E_BFIS)


State 68

   39 E_BFIS: E_BFIS . TOK_PLUS E_BFIS
   40       | E_BFIS . TOK_MINUS E_BFIS
   41       | E_BFIS . TOK_MULTIPLY E_BFIS
   42       | E_BFIS . TOK_DIVIDE E_BFIS
   42       | E_BFIS TOK_DIVIDE E_BFIS .

    $default  reduce using rule 42 (E_BFIS)


State 69

   23 IFDECL: $@6 TOK_IF TOK_LEFT BOOLE $@7 TOK_RIGHT . TOK_THEN B

    TOK_THEN  shift, and go to state 77


State 70

   25 BOOLE: E_BFIS $@8 TOK_EQU . E_BFIS

    TOK_LEFT          shift, and go to state 37
    TOK_INT_VALUE     shift, and go to state 38
    TOK_FLOAT_VALUE   shift, and go to state 39
    TOK_TRUE          shift, and go to state 40
    TOK_FALSE         shift, and go to state 41
    TOK_STRING_VALUE  shift, and go to state 42
    TOK_VARIABLE      shift, and go to state 43

    E_BFIS  go to state 78


State 71

   27 BOOLE: E_BFIS $@9 TOK_NEQ . E_BFIS

    TOK_LEFT          shift, and go to state 37
    TOK_INT_VALUE     shift, and go to state 38
    TOK_FLOAT_VALUE   shift, and go to state 39
    TOK_TRUE          shift, and go to state 40
    TOK_FALSE         shift, and go to state 41
    TOK_STRING_VALUE  shift, and go to state 42
    TOK_VARIABLE      shift, and go to state 43

    E_BFIS  go to state 79


State 72

   29 BOOLE: E_BFIS $@10 TOK_GTR . E_BFIS

    TOK_LEFT          shift, and go to state 37
    TOK_INT_VALUE     shift, and go to state 38
    TOK_FLOAT_VALUE   shift, and go to state 39
    TOK_TRUE          shift, and go to state 40
    TOK_FALSE         shift, and go to state 41
    TOK_STRING_VALUE  shift, and go to state 42
    TOK_VARIABLE      shift, and go to state 43

    E_BFIS  go to state 80


State 73

   31 BOOLE: E_BFIS $@11 TOK_LSS . E_BFIS

    TOK_LEFT          shift, and go to state 37
    TOK_INT_VALUE     shift, and go to state 38
    TOK_FLOAT_VALUE   shift, and go to state 39
    TOK_TRUE          shift, and go to state 40
    TOK_FALSE         shift, and go to state 41
    TOK_STRING_VALUE  shift, and go to state 42
    TOK_VARIABLE      shift, and go to state 43

    E_BFIS  go to state 81


State 74

   33 BOOLE: E_BFIS $@12 TOK_LEQ . E_BFIS

    TOK_LEFT          shift, and go to state 37
    TOK_INT_VALUE     shift, and go to state 38
    TOK_FLOAT_VALUE   shift, and go to state 39
    TOK_TRUE          shift, and go to state 40
    TOK_FALSE         shift, and go to state 41
    TOK_STRING_VALUE  shift, and go to state 42
    TOK_VARIABLE      shift, and go to state 43

    E_BFIS  go to state 82


State 75

   35 BOOLE: E_BFIS $@13 TOK_GEQ . E_BFIS

    TOK_LEFT          shift, and go to state 37
    TOK_INT_VALUE     shift, and go to state 38
    TOK_FLOAT_VALUE   shift, and go to state 39
    TOK_TRUE          shift, and go to state 40
    TOK_FALSE         shift, and go to state 41
    TOK_STRING_VALUE  shift, and go to state 42
    TOK_VARIABLE      shift, and go to state 43

    E_BFIS  go to state 83


State 76

   38 REPUNTIL: $@14 TOK_REPEAT B TOK_UNTIL TOK_LEFT BOOLE . $@15 TOK_RIGHT

    $default  reduce using rule 37 ($@15)

    $@15  go to state 84


State 77

   23 IFDECL: $@6 TOK_IF TOK_LEFT BOOLE $@7 TOK_RIGHT TOK_THEN . B

    $default  reduce using rule 4 ($@1)

    B    go to state 85
    $@1  go to state 9


State 78

   25 BOOLE: E_BFIS $@8 TOK_EQU E_BFIS .
   39 E_BFIS: E_BFIS . TOK_PLUS E_BFIS
   40       | E_BFIS . TOK_MINUS E_BFIS
   41       | E_BFIS . TOK_MULTIPLY E_BFIS
   42       | E_BFIS . TOK_DIVIDE E_BFIS

    TOK_PLUS      shift, and go to state 52
    TOK_MINUS     shift, and go to state 53
    TOK_MULTIPLY  shift, and go to state 54
    TOK_DIVIDE    shift, and go to state 55

    $default  reduce using rule 25 (BOOLE)


State 79

   27 BOOLE: E_BFIS $@9 TOK_NEQ E_BFIS .
   39 E_BFIS: E_BFIS . TOK_PLUS E_BFIS
   40       | E_BFIS . TOK_MINUS E_BFIS
   41       | E_BFIS . TOK_MULTIPLY E_BFIS
   42       | E_BFIS . TOK_DIVIDE E_BFIS

    TOK_PLUS      shift, and go to state 52
    TOK_MINUS     shift, and go to state 53
    TOK_MULTIPLY  shift, and go to state 54
    TOK_DIVIDE    shift, and go to state 55

    $default  reduce using rule 27 (BOOLE)


State 80

   29 BOOLE: E_BFIS $@10 TOK_GTR E_BFIS .
   39 E_BFIS: E_BFIS . TOK_PLUS E_BFIS
   40       | E_BFIS . TOK_MINUS E_BFIS
   41       | E_BFIS . TOK_MULTIPLY E_BFIS
   42       | E_BFIS . TOK_DIVIDE E_BFIS

    TOK_PLUS      shift, and go to state 52
    TOK_MINUS     shift, and go to state 53
    TOK_MULTIPLY  shift, and go to state 54
    TOK_DIVIDE    shift, and go to state 55

    $default  reduce using rule 29 (BOOLE)


State 81

   31 BOOLE: E_BFIS $@11 TOK_LSS E_BFIS .
   39 E_BFIS: E_BFIS . TOK_PLUS E_BFIS
   40       | E_BFIS . TOK_MINUS E_BFIS
   41       | E_BFIS . TOK_MULTIPLY E_BFIS
   42       | E_BFIS . TOK_DIVIDE E_BFIS

    TOK_PLUS      shift, and go to state 52
    TOK_MINUS     shift, and go to state 53
    TOK_MULTIPLY  shift, and go to state 54
    TOK_DIVIDE    shift, and go to state 55

    $default  reduce using rule 31 (BOOLE)


State 82

   33 BOOLE: E_BFIS $@12 TOK_LEQ E_BFIS .
   39 E_BFIS: E_BFIS . TOK_PLUS E_BFIS
   40       | E_BFIS . TOK_MINUS E_BFIS
   41       | E_BFIS . TOK_MULTIPLY E_BFIS
   42       | E_BFIS . TOK_DIVIDE E_BFIS

    TOK_PLUS      shift, and go to state 52
    TOK_MINUS     shift, and go to state 53
    TOK_MULTIPLY  shift, and go to state 54
    TOK_DIVIDE    shift, and go to state 55

    $default  reduce using rule 33 (BOOLE)


State 83

   35 BOOLE: E_BFIS $@13 TOK_GEQ E_BFIS .
   39 E_BFIS: E_BFIS . TOK_PLUS E_BFIS
   40       | E_BFIS . TOK_MINUS E_BFIS
   41       | E_BFIS . TOK_MULTIPLY E_BFIS
   42       | E_BFIS . TOK_DIVIDE E_BFIS

    TOK_PLUS      shift, and go to state 52
    TOK_MINUS     shift, and go to state 53
    TOK_MULTIPLY  shift, and go to state 54
    TOK_DIVIDE    shift, and go to state 55

    $default  reduce using rule 35 (BOOLE)


State 84

   38 REPUNTIL: $@14 TOK_REPEAT B TOK_UNTIL TOK_LEFT BOOLE $@15 . TOK_RIGHT

    TOK_RIGHT  shift, and go to state 86


State 85

   23 IFDECL: $@6 TOK_IF TOK_LEFT BOOLE $@7 TOK_RIGHT TOK_THEN B .

    $default  reduce using rule 23 (IFDECL)


State 86

   38 REPUNTIL: $@14 TOK_REPEAT B TOK_UNTIL TOK_LEFT BOOLE $@15 TOK_RIGHT .

    $default  reduce using rule 38 (REPUNTIL)
